cabal-version:   3.0
name:            colonnade
version:         1.2.0.3
synopsis:
  Generic types and functions for columnar encoding and decoding

description:
  The `colonnade` package provides a way to talk about
  columnar encodings and decodings of data. This package provides
  very general types and does not provide a way for the end-user
  to actually apply the columnar encodings they build to data.
  Most users will also want to one a companion packages
  that provides (1) a content type and (2) functions for feeding
  data into a columnar encoding:
  .
  * <https://hackage.haskell.org/package/lucid-colonnade lucid-colonnade> for `lucid` html tables
  .
  * <https://hackage.haskell.org/package/blaze-colonnade blaze-colonnade> for `blaze` html tables
  .
  * <https://hackage.haskell.org/package/reflex-dom-colonnade reflex-dom-colonnade> for reactive `reflex-dom` tables
  .
  * <https://hackage.haskell.org/package/yesod-colonnade yesod-colonnade> for `yesod` widgets
  .
  * <http://hackage.haskell.org/package/siphon siphon> for encoding and decoding CSVs

homepage:        https://github.com/byteverse/colonnade
bug-reports:     https://github.com/byteverse/colonnade/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          Andrew Martin
maintainer:      amartin@layer3com.com
copyright:       2016 Andrew Martin
category:        web
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:     GHC ==9.4.8 || ==9.6.3 || ==9.8.1

common build-settings
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages
  build-depends:    base >=4.12 && <5

library
  import:          build-settings
  ghc-options:     -O2
  hs-source-dirs:  src
  exposed-modules:
    Colonnade
    Colonnade.Encode

  build-depends:
    , profunctors  >=5.0
    , vector       >=0.10

source-repository head
  type:     git
  location: git://github.com/byteverse/colonnade.git
