name:                blaze-colonnade
version:             1.2.2
synopsis:            Helper functions for using blaze-html with colonnade
description:         Blaze HTML and colonnade
homepage:            https://github.com/andrewthad/colonnade#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2017 Andrew Martin
category:            web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Text.Blaze.Colonnade
  build-depends:
      base >= 4.9 && < 5
    , colonnade >= 1.1 && < 1.3
    , blaze-markup >= 0.7 && < 0.9
    , blaze-html >= 0.8 && < 0.10
    , text >= 1.2 && < 1.3
  default-language:    Haskell2010

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
      base >= 4.7 && <= 5
    , colonnade
    , doctest
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/colonnade
