name:                colonnade
version:             0.4.7
synopsis:            Generic types and functions for columnar encoding and decoding
description:         Please see README.md
homepage:            https://github.com/andrewthad/colonnade#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2016 Andrew Martin
category:            web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Colonnade.Types
    Colonnade.Encoding
    Colonnade.Encoding.Text
    Colonnade.Encoding.ByteString.Char8
    Colonnade.Decoding
    Colonnade.Decoding.Text
    Colonnade.Decoding.ByteString.Char8
    Colonnade.Internal
  build-depends:
      base >= 4.7 && < 5
    , contravariant >= 1.2 && < 1.5
    , vector >= 0.10 && < 0.12
    , text >= 1.0 && < 1.3
    , bytestring >= 0.10 && < 0.11
  default-language:    Haskell2010
  ghc-options: -Wall

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
      base >= 4.7 && <= 5
    , colonnade
    , doctest
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/colonnade
