name:                reflex-dom-colonnade
version:             0.4.2
synopsis:            Use colonnade with reflex-dom
description:         Please see README.md
homepage:            https://github.com/andrewthad/colonnade#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2016 Andrew Martin
category:            web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Reflex.Dom.Colonnade
  build-depends:
      base >= 4.7 && < 5
    , colonnade >= 0.4.1
    , contravariant
    , vector
    , reflex
    , reflex-dom
    , containers
    , semigroups
  default-language: Haskell2010
  ghc-options:      -Wall

source-repository head
  type:     git
  location: https://github.com/andrewthad/colonnade
