name:                reflex-dom-colonnade
version:             0.4.6
synopsis:            Use colonnade with reflex-dom
description:         Please see README.md
homepage:            https://github.com/andrewthad/colonnade#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2016 Andrew Martin
category:            web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Reflex.Dom.Colonnade
  build-depends:
      base >= 4.7 && < 5.0
    , colonnade >= 0.4.6 && < 0.5
    , contravariant >= 1.2 && < 1.5
    , vector >= 0.10 && < 0.12
    , text >= 1.0 && < 1.3
    , reflex
    , reflex-dom
    , containers >= 0.5 && < 0.6
    , semigroups >= 0.16 && < 0.19
  default-language: Haskell2010
  ghc-options:      -Wall

source-repository head
  type:     git
  location: https://github.com/andrewthad/colonnade
