name: reflex-dom-colonnade
version: 0.6.0
synopsis: Use colonnade with reflex-dom
description: Please see README.md
homepage: https://github.com/andrewthad/colonnade#readme
license: BSD3
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2016 Andrew Martin
category: web
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Reflex.Dom.Colonnade
  build-depends:
      base >= 4.7 && < 5.0
    , colonnade >= 1.1 && < 1.2
    , contravariant >= 1.2 && < 1.5
    , vector >= 0.10 && < 0.12
    , text >= 1.0 && < 1.3
    , reflex == 0.5.*
    , reflex-dom == 0.4.*
    , containers >= 0.5 && < 0.6
    , profunctors >= 5.2 && < 5.3
    , transformers >= 0.5 && < 0.6
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/colonnade
