name:                siphon
version:             0.1
synopsis:            Generic types and functions for columnar encoding and decoding
description:         Please see README.md
homepage:            https://github.com/andrewthad/colonnade#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2016 Andrew Martin
category:            web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Siphon.Text
    Siphon.ByteString.Char8
    Siphon
    Siphon.Types
    Siphon.Content
    Siphon.Encoding
    Siphon.Decoding
    Siphon.Internal
  build-depends:
      base >= 4.7 && < 5
    , colonnade
    , text
    , bytestring
    , contravariant
    , vector
    , pipes
    , attoparsec
  default-language:    Haskell2010

test-suite siphon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       
      base
    , either
    , siphon
    , colonnade
    , contravariant
    , test-framework
    , test-framework-quickcheck2
    , QuickCheck
    , text
    , bytestring
    , pipes
    , HUnit
    , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/colonnade
