name: siphon
version: 0.8.1
synopsis: Encode and decode CSV files
description: Please see README.md
homepage: https://github.com/andrewthad/colonnade#readme
license: BSD3
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2016 Andrew Martin
category: web
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Siphon
    Siphon.Types
  build-depends:
      base >= 4.9 && < 5
    , colonnade >= 1.2 && < 1.3
    , text >= 1.0 && < 1.3
    , bytestring
    , vector
    , streaming >= 0.1.4 && < 0.3
    , attoparsec
    , transformers >= 0.5 && < 0.6
  default-language:    Haskell2010

test-suite doctest
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Doctest.hs
  build-depends:
      base
    , siphon
    , doctest >= 0.10
  default-language:    Haskell2010

test-suite siphon-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  build-depends:
      base
    , either
    , siphon
    , colonnade
    , contravariant
    , test-framework
    , test-framework-quickcheck2
    , QuickCheck
    , text
    , bytestring
    , pipes
    , HUnit
    , test-framework-hunit
    , profunctors
    , streaming
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/andrewthad/colonnade
