name:                yesod-colonnade
version:             0.1
synopsis:            Helper functions for using yesod with colonnade
description:         Yesod and colonnade
homepage:            https://github.com/andrewthad/colonnade#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2016 Andrew Martin
category:            web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Yesod.Colonnade
  build-depends:
      base >= 4.7 && < 5
    , colonnade >= 0.4.6 && < 0.5
    , yesod-core >= 1.4.0 && < 1.5
    , text >= 1.0 && < 1.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/colonnade
